<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.Quiz">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/bts_heart" />

        <android.support.v7.widget.CardView
            android:id="@+id/q"
            style="@style/styleCard"
            card_view:cardBackgroundColor="@color/background"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="@dimen/normalSpacing">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/normalSpacing"
                android:orientation="vertical">

                <TextView
                    style="@style/style4"
                    android:text="@string/question5" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#000000"></View>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/answer"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q5a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/q5a" />

                    <RadioButton
                        android:id="@+id/q5b"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/q5b" />

                    <RadioButton
                        android:id="@+id/q5c"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/q5c" />

                    <RadioButton
                        android:id="@+id/q5d"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/q5d" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            style="@style/style2"
            android:layout_below="@id/q"
            android:onClick="next5" />


    </RelativeLayout>
</ScrollView>