<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.quiz.Quiz">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bts_heart"
                android:scaleType="fitXY"/>

            <android.support.v7.widget.CardView
                android:id="@+id/q2"
                style="@style/styleCard"
                card_view:cardBackgroundColor="@color/background"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="@dimen/normalSpacing">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/normalSpacing"
                    android:orientation="vertical">

                    <TextView
                        style="@style/style4"
                        android:text="@string/question2"/>

                    <pl.droidsonroids.gif.GifImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="@dimen/smallSpacing"
                        android:layout_marginTop="@dimen/smallSpacing"
                        android:src="@mipmap/god_of_destruction" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#000000"></View>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/answer"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q2a"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/q2a" />

                        <RadioButton
                            android:id="@+id/q2b"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/q2b" />

                        <RadioButton
                            android:id="@+id/q2c"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/q2c" />

                    </RadioGroup>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <Button
                android:layout_below="@id/q2"
                android:onClick="next2"
                style="@style/style2"
                />

        </RelativeLayout>
</ScrollView>