<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.Quiz">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/bts_heart" />

        <android.support.v7.widget.CardView
            android:id="@+id/q"
            style="@style/styleCard"
            card_view:cardBackgroundColor="@color/background"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="@dimen/normalSpacing">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/normalSpacing"
                android:orientation="vertical">

                <TextView
                    style="@style/style4"
                    android:text="@string/question10"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#000000"></View>

               <EditText
                   android:id="@+id/q10"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/answer"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <Button
            android:layout_below="@id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/largeSpacing"
            android:layout_centerHorizontal="true"
            android:background="@color/buttonColor"
            android:onClick="next10"
            android:text="@string/submit"
            android:textAppearance="@style/style2"
            android:textAllCaps="true"/>


    </RelativeLayout>
</ScrollView>