<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bts_heart" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:background="@color/background"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/bts"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/bts_logo_1" />

            <TextView
                android:id="@+id/howWellDo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bts"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/shortDis"
                android:background="#aef74068"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/bts"
                android:textAppearance="@style/style" />

            <EditText
                android:id="@+id/entername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/howWellDo"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/shortDis"
                android:hint="@string/enter_name" />

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/entername"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/longDis"
                android:background="@color/buttonColor"
                android:onClick="start"
                android:text="@string/start_button"
                android:textAppearance="@style/style2" />

        </RelativeLayout>

    </RelativeLayout>


</ScrollView>
